# swf-panda-workers

./: CLAUDE.md  README.md  message-formats.md  pyproject.toml
config/: swf_panda_workers.yaml
lib/swf_panda_workers/: transceiver.py
lib/swf_panda_workers/brokers/: activemq.py
lib/swf_panda_workers/prompt/handlers/: panda.py  workerhandler.py
lib/swf_panda_workers/utils/: cache.py  config.py
